# ikihs

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  CHANGELOG.md  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  skills-lock.json  tsconfig.json  wiki.md
.agents/skills/turborepo/references/best-practices/: structure.md
.agents/skills/turborepo/references/configuration/: RULE.md
.cargo/: config.toml
.changes/: 1734234400000.md  1784814631.md  README.md  v0.1.0.md
.github/workflows/: ci.yml  publish.yml  update-release.yml  version-packages.yml
apps/ikihs-cli/: Cargo.toml  README.md
apps/ikihs-cli/src/: main.rs
crates/ikihs-core/: Cargo.toml
crates/ikihs-core/src/: engine.rs  error.rs  lib.rs  theme.rs
crates/ikihs-core/src/scope/: mapper.rs  mod.rs
crates/ikihs-engine-composite/: Cargo.toml
crates/ikihs-engine-composite/src/: lib.rs
crates/ikihs-engine-syntect/: Cargo.toml
crates/ikihs-engine-syntect/fixtures/: dark-plus.json
crates/ikihs-engine-syntect/fixtures/css/: at-rules.css  at-rules.shiki.json  selectors.css  selectors.shiki.json
crates/ikihs-engine-syntect/fixtures/edge-cases/: empty.shiki.json  only-comments.rs  only-comments.shiki.json  single-line.shiki.json
crates/ikihs-engine-syntect/fixtures/html/: attributes.html  attributes.shiki.json  tags.html  tags.shiki.json
crates/ikihs-engine-syntect/fixtures/javascript/: classes.js  classes.shiki.json  functions.js  functions.shiki.json
crates/ikihs-engine-syntect/fixtures/json/: nested.json  nested.shiki.json  object.json  object.shiki.json
crates/ikihs-engine-syntect/fixtures/markdown/: code-blocks.md  code-blocks.shiki.json  headers.md  headers.shiki.json
crates/ikihs-engine-syntect/fixtures/python/: decorators.py  decorators.shiki.json  functions.py  functions.shiki.json
crates/ikihs-engine-syntect/fixtures/rust/: comments.rs  comments.shiki.json  hello.rs  hello.shiki.json
crates/ikihs-engine-syntect/fixtures/shell/: commands.sh  commands.shiki.json  vars.sh  vars.shiki.json
crates/ikihs-engine-syntect/fixtures/typescript/: generics.shiki.json  generics.ts  types.shiki.json  types.ts
crates/ikihs-engine-syntect/fixtures/yaml/: keys-values.shiki.json  keys-values.yaml  nested.shiki.json  nested.yaml
crates/ikihs-engine-syntect/grammars/: convert_tm.py
crates/ikihs-engine-syntect/src/: lib.rs
crates/ikihs-engine-syntect/tests/: check_typescript.rs  diagnose_diffs.rs  fixture_tests.rs  load_typescript.rs
crates/ikihs-engine-treesitter/: Cargo.toml
crates/ikihs-engine-treesitter/examples/: classes_diag.rs  color_map_debug.rs  dump_tokens.rs  dump_tree.rs  js_diagnose.rs  scope_debug.rs  tree_dump.rs
crates/ikihs-engine-treesitter/src/: lib.rs  mapper.rs
crates/ikihs-engine-treesitter/tests/: check_tokens.rs  diagnose.rs  fixture_tests.rs
crates/ikihs-themes/: Cargo.toml
crates/ikihs-themes/src/: lib.rs  registry.rs  tm_theme.rs  vscode_theme.rs
scripts/: changelog.ts
