[workspace]
resolver = "2"
members = [
  "crates/ikihs-core",
  "crates/ikihs-themes",
  "crates/ikihs-engine-syntect",
  "apps/ikihs-cli",
  "packages/ikihsjs",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
