[workspace]
resolver = "2"
members = [ "crates/ikihs-core", "crates/ikihs-themes", "crates/ikihs-engine-syntect", "apps/ikihs-cli", "packages/ikihsjs" ]

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
serde_json = "1"
thiserror = "2"

[workspace.dependencies.serde]
version = "1"
features = [ "derive" ]

[workspace.metadata.dist]
cargo-dist-version = "0.32.0"
ci = [ "github" ]
installers = [ "shell", "powershell" ]
targets = [ "aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc" ]
publish-jobs = []
host-jobs = []
pr-run-mode = "plan"

[profile.dist]
inherits = "release"
lto = "thin"
