[package]
name = "ikihs-engine-composite"
version.workspace = true
edition.workspace = true
license.workspace = true

repository = "https://github.com/CarlosEduJs/ikihs"

[dependencies]
ikihs-core = { path = "../../crates/ikihs-core" }
ikihs-engine-syntect = { path = "../../crates/ikihs-engine-syntect" }
ikihs-engine-treesitter = { path = "../../crates/ikihs-engine-treesitter" }
