[package]
name = "ikihs-engine-syntect"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[dependencies]
ikihs-core = { path = "../ikihs-core" }
thiserror.workspace = true

[dependencies.syntect]
version = "5"
default-features = false
features = ["default-onig", "plist-load", "default-syntaxes", "yaml-load"]

[dev-dependencies]
ikihs-themes = { path = "../ikihs-themes" }
ikihs-engine-treesitter = { path = "../ikihs-engine-treesitter" }
serde.workspace = true
serde_json.workspace = true
