[package]
name = "ikihs-engine-syntect"
version = "0.1.0"

[package.edition]
workspace = true

[package.license]
workspace = true

[dependencies.ikihs-core]
path = "../ikihs-core"

[dependencies.thiserror]
workspace = true

[dependencies.syntect]
version = "5"
default-features = false
features = [ "default-onig", "plist-load", "default-syntaxes", "yaml-load" ]

[dev-dependencies.ikihs-themes]
path = "../ikihs-themes"

[dev-dependencies.ikihs-engine-treesitter]
path = "../ikihs-engine-treesitter"

[dev-dependencies.serde]
workspace = true

[dev-dependencies.serde_json]
workspace = true
