[package]
name = "ikihs-engine-treesitter"
version = "0.1.0"

[package.edition]
workspace = true

[package.license]
workspace = true

[dependencies]
tree-sitter = "0.26"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"

[dependencies.ikihs-core]
path = "../ikihs-core"

[dev-dependencies.ikihs-themes]
path = "../ikihs-themes"

[dev-dependencies.serde]
workspace = true

[dev-dependencies.serde_json]
workspace = true
