[package]
name = "ikihs-themes"
version = "0.1.0"

[package.edition]
workspace = true

[package.license]
workspace = true

[dependencies]
quick-xml = "0.37"

[dependencies.ikihs-core]
path = "../ikihs-core"

[dependencies.serde]
workspace = true

[dependencies.serde_json]
workspace = true

[dependencies.thiserror]
workspace = true
